# SmartOps

./: .gitignore  INDEX.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETUP_VERIFICATION.md  app.py  pyproject.toml  requirements.txt  sbom.json
config/: __init__.py  prompts.py  settings.py
core/: decision_engine.py  llm_engine.py  models.py  rag_engine.py  risk_scorer.py
data/: database.py  repository.py
policies/: change_management_policy.txt  deployment_standards.txt  security_policy.txt
sample_data/: generate_samples.py
sample_data/sample_data/: sample_changes.xlsx
utils/: excel_handler.py  logger.py  validators.py
views/: 01_Single_Analysis.py  02_Bulk_Analysis.py  03_Analytics.py  04_History.py  __init__.py  analytics_view.py  bulk_analysis.py  history_view.py  single_analysis.py
