[project]
name = "incidence-management"
version = "0.1.0"
description = "AI-powered Change Management Analysis System with LLM and RAG"
requires-python = ">=3.10"
authors = [{name = "AI Engineering Team"}]
license = {text = "MIT"}

dependencies = [
    "streamlit>=1.28.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic[email]>=2.0.0",
    "langchain>=0.1.0",
    "langchain-groq>=0.1.0",
    "langchain-community>=0.0.1",
    "chromadb>=0.5.0",
    "sentence-transformers>=2.2.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "sqlalchemy>=2.0.0",
    "plotly>=5.17.0",
    "requests>=2.31.0",
    "langchain-core>=1.2.13",
    "langchain-text-splitters>=0.0.1",
]

[tool.uv]
dev-dependencies = []
